[project]
name = "websiteanalyzerbydomai"
version = "0.1.0"
description = "Проект: создайте анализатор сайтов по домену"
authors = [
    {name = "larsanik"}
]
requires-python = ">=3.13"
dependencies = [
    "python-whois (>=0.9.6,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
